<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/background_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="nl.utwente.hmi.deenigmachildtabletapp.MainActivity" >

	<TextView
		android:layout_width="22dp"
		android:layout_height="22dp"
		android:gravity="center_horizontal"
		android:onClick="toggleConnectionSettings"
		android:clickable="true"
		android:text="..."
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"/>

	<RelativeLayout
		android:id="@+id/assignment_view"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="invisible">

		<ImageView
			android:id="@+id/image_view"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:visibility="invisible"
			android:contentDescription="Een plaatje"
			android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
			/>

        <TextView
            android:id="@+id/assignment_text_view"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/loaded"
            android:layout_below="@id/image_view"
            android:textSize="36sp"
            android:layout_marginTop="22dp"/>

		<Button
			android:id="@+id/complete_assignment_button"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/complete_assignment"
			android:drawableRight="@drawable/continue_icon"
			android:visibility="invisible"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:textSize="32sp"
			android:padding="12sp"
			android:maxWidth="400dp"
			android:onClick="continueAssignment" />

		<Button
			android:id="@+id/read_aloud_button"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:drawableRight="@drawable/speech_balloon"
			android:visibility="invisible"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:textSize="32sp"
			android:padding="12sp"
			android:maxWidth="150dp"
			android:onClick="readAloud" />
	</RelativeLayout>

	<LinearLayout
		android:id="@+id/settings_view"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginTop="100dp"
		android:visibility="visible">

		<TextView xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/connectionStatus"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="Disconnected"/>
		<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/radio_mode"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="22dp"
			android:orientation="horizontal">
			<RadioButton android:id="@+id/radio_child"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Child"/>
			<RadioButton android:id="@+id/radio_adult"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:text="Adult"/>
		</RadioGroup>

		<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/radio_middleware"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="22dp">
			<RadioButton android:id="@+id/radio_ros"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:text="ROS"/>
			<RadioButton android:id="@+id/radio_apollo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="APOLLO/STOMP"/>
		</RadioGroup>

		<EditText
			android:id="@+id/ipaddress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="22dp"
			android:text="192.168.0.22"/>

		<Button
			android:id="@+id/connect"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="Connect"
			android:layout_marginTop="22dp"
			android:onClick="connect" />
	</LinearLayout>

	<RelativeLayout
		android:id="@+id/clickable_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ImageView
			android:id="@+id/clickable_view_image"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:visibility="invisible"
			android:layout_centerInParent="true"
			android:adjustViewBounds="true"
			/>
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/timer_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="invisible">
		<TextView
			android:id="@+id/timer_description_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/timer_description"
			android:layout_centerInParent="true"
			android:textSize="42sp"
			android:layout_marginTop="16dp"
			android:layout_alignParentTop="true"/>

		<TextView
			android:id="@+id/timer_left_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/timer_text"
			android:layout_centerInParent="true"
			android:textSize="30sp"
			android:layout_marginTop="135dp"
			android:layout_alignTop="@+id/timer_description_text"/>
		<TextView
			android:id="@+id/timer_left_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/timer_value"
			android:layout_centerInParent="true"
			android:textSize="22sp"
			android:layout_marginTop="36dp"
			android:layout_alignTop="@id/timer_left_text"/>


		<TextView
			android:id="@+id/timer_right_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/timer_text"
			android:layout_centerInParent="true"
			android:textSize="30sp"
			android:layout_marginTop="94dp"
			android:layout_alignTop="@+id/timer_left_value"/>
		<TextView
			android:id="@+id/timer_right_value"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/timer_value"
			android:layout_centerInParent="true"
			android:textSize="22sp"
			android:layout_marginTop="36dp"
			android:layout_alignTop="@id/timer_right_text"/>

		<TextView
			android:id="@+id/timer_outcome"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Gelijkspel"
			android:layout_centerInParent="true"
			android:textSize="42sp"
			android:layout_marginTop="216dp"
			android:layout_alignTop="@id/timer_right_value"/>


		<Button
			android:id="@+id/timer_redo_button"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/redo_assignment"
			android:drawableLeft="@drawable/redo_icon"
			android:drawablePadding="10sp"
			android:visibility="invisible"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:textSize="32sp"
			android:padding="12sp"
			android:maxWidth="400dp"
			android:onClick="redoAssignment" />

		<Button
			android:id="@+id/timer_continue_button"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/complete_assignment"
			android:drawableRight="@drawable/continue_icon"
			android:drawablePadding="10sp"
			android:visibility="invisible"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:textSize="32sp"
			android:padding="12sp"
			android:maxWidth="400dp"
			android:onClick="continueAssignment" />

	</RelativeLayout>


	<RelativeLayout
		android:id="@+id/countdown_view"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="invisible">
		<TextView
			android:id="@+id/countdown_display"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=""
			android:layout_centerInParent="true"
			android:textSize="222sp"
			android:layout_marginTop="222dp"
			android:layout_alignParentTop="true"/>


	</RelativeLayout>



	<RelativeLayout
		android:id="@+id/ball_buttons_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="invisible">
		<TextView
			android:id="@+id/ball_buttons_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Welke bal heb je neergelegd?"
			android:layout_centerInParent="true"
			android:textSize="30sp"
			android:layout_marginTop="22dp"
			android:layout_alignParentTop="true"/>

		<GridLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="142dp"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:columnCount="3">
			<Button
				android:id="@+id/btn_bm"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/bmbm_drawable"
				android:text="Grote knikker"
				android:tag="BM"
				android:textSize="22dp"
				android:onClick="ballButtonPress"
				android:gravity="bottom|center"
				android:background="#dddddd"
				android:paddingTop="2dp"
				android:paddingRight="2dp"
				android:paddingBottom="15dp"
				android:paddingLeft="2dp"
				android:layout_margin="5dp"
				android:drawablePadding="15dp"/>
			<Button
				android:id="@+id/btn_sm"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/smsm_drawable"
				android:text="Kleine knikker"
				android:tag="SM"
				android:textSize="22dp"
				android:onClick="ballButtonPress"
				android:gravity="bottom|center"
				android:background="#dddddd"
				android:paddingTop="2dp"
				android:paddingRight="2dp"
				android:paddingBottom="15dp"
				android:paddingLeft="2dp"
				android:layout_margin="5dp"
				android:drawablePadding="15dp"/>
			<Button
				android:id="@+id/btn_sb"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/sbsb_drawable"
				android:text="Piepschuim bal"
				android:tag="SB"
				android:textSize="22dp"
				android:onClick="ballButtonPress"
				android:gravity="bottom|center"
				android:background="#dddddd"
				android:paddingTop="2dp"
				android:paddingRight="2dp"
				android:paddingBottom="15dp"
				android:paddingLeft="2dp"
				android:layout_margin="5dp"
				android:drawablePadding="15dp"/>
			<Button
				android:id="@+id/btn_bb"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/gbbgbb_drawable"
				android:text="Rubberen bal"
				android:tag="BB"
				android:textSize="22dp"
				android:onClick="ballButtonPress"
				android:gravity="bottom|center"
				android:background="#dddddd"
				android:paddingTop="2dp"
				android:paddingRight="2dp"
				android:paddingBottom="15dp"
				android:paddingLeft="2dp"
				android:layout_margin="5dp"
				android:drawablePadding="15dp"/>
			<Button
				android:id="@+id/btn_wb"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/wbwb_drawable"
				android:text="Houten bal"
				android:tag="WB"
				android:textSize="22dp"
				android:onClick="ballButtonPress"
				android:gravity="bottom|center"
				android:background="#dddddd"
				android:paddingTop="2dp"
				android:paddingRight="2dp"
				android:paddingBottom="15dp"
				android:paddingLeft="2dp"
				android:layout_margin="5dp"
				android:drawablePadding="15dp"/>
			<Button
				android:id="@+id/btn_pb"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:drawableTop="@drawable/pbpb_drawable"
				android:text="Pingpong bal"
				android:tag="PB"
				android:textSize="22dp"
				android:onClick="ballButtonPress"
				android:gravity="bottom|center"
				android:background="#dddddd"
				android:paddingTop="2dp"
				android:paddingRight="2dp"
				android:paddingBottom="15dp"
				android:paddingLeft="2dp"
				android:layout_margin="5dp"
				android:drawablePadding="15dp"/>


		</GridLayout>

		<Button
			android:id="@+id/ball_buttons_continue_button"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/complete_assignment"
			android:drawableRight="@drawable/continue_icon"
			android:visibility="visible"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:textSize="32sp"
			android:padding="12sp"
			android:maxWidth="400dp"
			android:onClick="submitBalls" />

	</RelativeLayout>


	<RelativeLayout
		android:id="@+id/buttons_view"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	</RelativeLayout>

    <RelativeLayout
        android:id="@+id/persistent_buttons_view"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_button_grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>

	<RelativeLayout
		android:id="@+id/slider_view"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center_horizontal">


	</RelativeLayout>
</RelativeLayout>
